Added circleci config

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 <body>
 <!-- Begin 'Sidebar' Section -->
 <div class="container">
-<div class="row">&nbsp;</div>
 <div class="row">
-<div class="col-xl-3"> 
-<img src="/img/henry-profile.jpg" width="250px" class="img-thumbnail rounded img-centre" alt="Henry Cole Profile Picture"/>
+<div class="col-xl-3">
+<div class="sticky-top pt-4"> 
+<img src="/img/henry-profile.jpg" width="250px" class="img-thumbnail rounded img-centre affix" alt="Henry Cole Profile Picture"/>
 <h1 class="text-center display-5 mt-2">Henry Cole</h1>
 <p class="text-center lead mt-2">Systems Analyst with 10 years' experience in enterprise IT</p>
 <span class="text-center img-centre">
@@ -23,13 +23,16 @@
 </span>
 <br/>
 </div>
+</div>
 <!-- End 'Sidebar' Section -->
 <!-- Main Column -->
-<div class="col-lg">
+<div class="col-lg m-4">
 <!-- Welcome -->
+<div class="row">
 <h2>Hello</h2>
 <p>My name is Henry Cole. I'm a systems analyst from London. I currently work at PRS for Music, primarily with Oracle/Java applications. 
 In my spare time I like travelling, visiting quirky pubs, and tinkering with personal code/computer projects.</p>
+</div>
 <div class="row mt-4">
     <div class="col-sm-auto">
         <h6>Technical Skills:</h6>
@@ -68,7 +71,7 @@ In my spare time I like travelling, visiting quirky pubs, and tinkering with per
 <!-- Work History -->
 <h2 class="mt-4">Work</h2>
 <div class="row d-flex">
-<div class="col-sm-auto mb-3">
+<div class="col-auto mb-3">
 <div class="card">
   <img src="/img/client/prs-for-music.jpg" class="card-img-top pt-2 img-centre" alt="PRS for Music Logo">
   <div class="card-body">
@@ -87,7 +90,7 @@ In my spare time I like travelling, visiting quirky pubs, and tinkering with per
     <span class="badge bg-light text-dark">Systems Documentation</span>
   </div>
 </div></div>
-<div class="col-sm-auto mb-3">
+<div class="col-auto mb-3">
 <div class="card">
   <img src="/img/client/abellio.jpg" class="card-img-top pt-2 img-centre" alt="Abellio Logo">
   <div class="card-body">
@@ -107,7 +110,7 @@ In my spare time I like travelling, visiting quirky pubs, and tinkering with per
     <span class="badge bg-light text-dark">CCTV Systems</span>
   </div>
 </div></div>
-<div class="col-sm-auto mb-3">
+<div class="col-auto mb-3">
 <div class="card">
   <img src="/img/client/the-windmill.jpg" class="card-img-top pt-2 img-centre" alt="The Windmill Chatham Green Logo">
   <div class="card-body">
