--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 <title>Henry Cole</title>
 <!-- Bootstrap CSS -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -42,6 +44,7 @@ In my spare time I like travelling, visiting quirky pubs, and tinkering with per
             <li>Office 365</li>
             <li>Azure Active Directory</li>
             <li>TCP/IP Networking</li>
+            <li>Windows Server</li>
             <li>WiFi</li>
             <li>SIP/VOIP Telephony</li>
             <li>Access Control & CCTV Systems</li>
