made some changes to card layout

--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@ In my spare time I like travelling, visiting quirky pubs, and tinkering with per
 
 <!-- Work History -->
 <h2 class="mt-4">Work</h2>
-<div class="row d-flex">
+<div class="row row-cols-3 row-cols-md-2">
 <div class="col-auto mb-3">
-<div class="card">
+<div class="card h-100">
   <img src="/img/client/prs-for-music.jpg" class="card-img-top pt-2 img-centre" alt="PRS for Music Logo">
   <div class="card-body">
     <h5 class="card-title">PRS for Music</h5>
@@ -95,7 +95,7 @@ In my spare time I like travelling, visiting quirky pubs, and tinkering with per
   </div>
 </div></div>
 <div class="col-auto mb-3">
-<div class="card">
+<div class="card h-100">
   <img src="/img/client/abellio.jpg" class="card-img-top pt-2 img-centre" alt="Abellio Logo">
   <div class="card-body">
     <h5 class="card-title">Abellio</h5>
@@ -115,7 +115,7 @@ In my spare time I like travelling, visiting quirky pubs, and tinkering with per
   </div>
 </div></div>
 <div class="col-auto mb-3">
-<div class="card">
+<div class="card h-100">
   <img src="/img/client/the-windmill.jpg" class="card-img-top pt-2 img-centre" alt="The Windmill Chatham Green Logo">
   <div class="card-body">
     <h5 class="card-title">The Windmill</h5>
