--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ In my spare time I like travelling, visiting quirky pubs, and tinkering with per
 <div class="row row-cols-3 row-cols-md-2">
 <div class="col-auto mb-3">
 <div class="card h-100">
-  <img src="/img/client/prs-for-music.jpg" class="card-img-top pt-2 img-centre" alt="PRS for Music Logo">
+  <img src="/img/client/prs-for-music.jpg" class="card-img-top pt-2 img-centre img-fluid" alt="PRS for Music Logo">
   <div class="card-body">
     <h5 class="card-title">PRS for Music</h5>
     <h5><small class="text-muted">2019-present</small></h5>
@@ -96,7 +96,7 @@ In my spare time I like travelling, visiting quirky pubs, and tinkering with per
 </div></div>
 <div class="col-auto mb-3">
 <div class="card h-100">
-  <img src="/img/client/abellio.jpg" class="card-img-top pt-2 img-centre" alt="Abellio Logo">
+  <img src="/img/client/abellio.jpg" class="card-img-top pt-2 img-centre img-fluid" alt="Abellio Logo">
   <div class="card-body">
     <h5 class="card-title">Abellio</h5>
     <h5><small class="text-muted">2012-2019</small></h5>
@@ -116,7 +116,7 @@ In my spare time I like travelling, visiting quirky pubs, and tinkering with per
 </div></div>
 <div class="col-auto mb-3">
 <div class="card h-100">
-  <img src="/img/client/the-windmill.jpg" class="card-img-top pt-2 img-centre" alt="The Windmill Chatham Green Logo">
+  <img src="/img/client/the-windmill.jpg" class="card-img-top pt-2 img-centre img-fluid" alt="The Windmill Chatham Green Logo">
   <div class="card-body">
     <h5 class="card-title">The Windmill</h5>
     <h5><small class="text-muted">ad-hoc</small></h5>
