--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@ In my spare time I like travelling, visiting quirky pubs, and tinkering with per
 
 <!-- Work History -->
 <h2 class="mt-4">Work</h2>
-<div class="row row-cols-3 row-cols-md-2">
-<div class="col-auto mb-3">
+<div class="row row-cols-1 row-cols-md-2">
+<div class="col mb-3">
 <div class="card h-100">
   <img src="/img/client/prs-for-music.jpg" class="card-img-top pt-2 img-centre img-fluid" alt="PRS for Music Logo">
   <div class="card-body">
@@ -94,7 +94,7 @@ In my spare time I like travelling, visiting quirky pubs, and tinkering with per
     <span class="badge bg-light text-dark">Systems Documentation</span>
   </div>
 </div></div>
-<div class="col-auto mb-3">
+<div class="col mb-3">
 <div class="card h-100">
   <img src="/img/client/abellio.jpg" class="card-img-top pt-2 img-centre img-fluid" alt="Abellio Logo">
   <div class="card-body">
@@ -114,7 +114,7 @@ In my spare time I like travelling, visiting quirky pubs, and tinkering with per
     <span class="badge bg-light text-dark">CCTV Systems</span>
   </div>
 </div></div>
-<div class="col-auto mb-3">
+<div class="col mb-3">
 <div class="card h-100">
   <img src="/img/client/the-windmill.jpg" class="card-img-top pt-2 img-centre img-fluid" alt="The Windmill Chatham Green Logo">
   <div class="card-body">
