more css changes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <!-- Begin 'Sidebar' Section -->
 <div class="container">
 <div class="row">
-<div class="col-xl-3">
+<div class="col-xl-3 col-12">
 <div class="sticky-top pt-4"> 
 <img src="/img/henry-profile.jpg" width="250px" class="img-thumbnail rounded img-centre affix" alt="Henry Cole Profile Picture"/>
 <h1 class="text-center display-5 mt-2">Henry Cole</h1>
@@ -29,7 +29,7 @@
 </div>
 <!-- End 'Sidebar' Section -->
 <!-- Main Column -->
-<div class="col-lg m-4">
+<div class="col-12 col-xl-8 m-4">
 <!-- Welcome -->
 <div class="row">
 <h2>Hello</h2>
@@ -74,9 +74,9 @@ In my spare time I like travelling, visiting quirky pubs, and tinkering with per
 
 <!-- Work History -->
 <h2 class="mt-4">Work</h2>
-<div class="row row-cols-1 row-cols-md-2">
-<div class="col mb-3">
-<div class="card h-100">
+<div class="row row-cols-1 row-cols-lg-2">
+<div class="col-lg-6 col-md-9 mb-3">
+<div class="card h-100 card-work">
   <img src="/img/client/prs-for-music.jpg" class="card-img-top pt-2 img-centre img-fluid" alt="PRS for Music Logo">
   <div class="card-body">
     <h5 class="card-title">PRS for Music</h5>
@@ -94,8 +94,8 @@ In my spare time I like travelling, visiting quirky pubs, and tinkering with per
     <span class="badge bg-light text-dark">Systems Documentation</span>
   </div>
 </div></div>
-<div class="col mb-3">
-<div class="card h-100">
+<div class="col-lg-6 col-md-9 mb-3">
+<div class="card h-100 card-work">
   <img src="/img/client/abellio.jpg" class="card-img-top pt-2 img-centre img-fluid" alt="Abellio Logo">
   <div class="card-body">
     <h5 class="card-title">Abellio</h5>
@@ -114,8 +114,8 @@ In my spare time I like travelling, visiting quirky pubs, and tinkering with per
     <span class="badge bg-light text-dark">CCTV Systems</span>
   </div>
 </div></div>
-<div class="col mb-3">
-<div class="card h-100">
+<div class="col-lg-6 col-md-9 mb-3">
+<div class="card h-100 card-work">
   <img src="/img/client/the-windmill.jpg" class="card-img-top pt-2 img-centre img-fluid" alt="The Windmill Chatham Green Logo">
   <div class="card-body">
     <h5 class="card-title">The Windmill</h5>
