--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </div>
 <!-- End 'Sidebar' Section -->
 <!-- Main Column -->
-<div class="col-12 col-xl-8 m-4">
+<div class="col-11 col-xl-8 m-4">
 <!-- Welcome -->
 <div class="row">
 <h2>Hello</h2>
@@ -133,11 +133,15 @@ In my spare time I like travelling, visiting quirky pubs, and tinkering with per
 </div></div>
 </div>
 <!-- Blog -->
+<div class="row">
 <h2 class="mt-4">Blog</h2>
 <p>Maybe one day I'll have one...</p>
+</div>
 <!-- Contact -->
+<div class="row">
 <h2 class="mt-4">Contact Me</h2>
 <p>You can reach me by email, Twitter, Discord. If you're lucky I might tell you how.</p>
+</div>
 </div>
 </div>
 <div class="row">&nbsp;</div>
