--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <!-- Begin 'Sidebar' Section -->
-<div class="container">
+<div class="container-sm">
 <div class="row">
 <div class="col-xl-3 col-12">
 <div class="sticky-top pt-4"> 
@@ -29,7 +29,7 @@
 </div>
 <!-- End 'Sidebar' Section -->
 <!-- Main Column -->
-<div class="col-11 col-xl-8 m-4">
+<div class="col-10 col-lg-11 col-xl-8 m-4">
 <!-- Welcome -->
 <div class="row">
 <h2>Hello</h2>
