--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <!-- Begin 'Sidebar' Section -->
-<div class="container-sm">
+<div class="container-md">
 <div class="row">
 <div class="col-xl-3 col-12">
 <div class="sticky-top pt-4"> 
