--- a/index.html
+++ b/index.html
@@ -104,7 +104,10 @@ In my spare time I like travelling, visiting quirky pubs, and tinkering with per
 </div></div>
 </div>
 <!-- Blog -->
-{% include blog_cards.html %}
+<div class="row">
+  <h2 class="mt-4">Blog</h2>
+  {% include blog_cards.html %}
+</div>
 <!-- Contact -->
 <div class="row">
 <h2 class="mt-4">Contact Me</h2>
