fixed wonky div

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ In my spare time I like travelling, visiting quirky pubs, and tinkering with per
           <li>French</li>
           <li>German</li>
       </ul>
-  </div></div>
+  </div>
 </div>
 <!-- Contact -->
 <div class="row">
