--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <!-- Intro -->
 <div class="row">
-<h2>Hello</h2>
+<h2 id="top">Hello</h2>
 <p>My name is Henry Cole. I'm a systems analyst from London. I currently work at PRS for Music, primarily with Oracle/Java applications. 
 In my spare time I like travelling, visiting quirky pubs, and tinkering with personal code/computer projects.</p>
 </div>
@@ -14,104 +14,16 @@ In my spare time I like travelling, visiting quirky pubs, and tinkering with per
 </div>
 <!-- Work History -->
 <div class="row">
-<h2 class="mt-4">Work</h2>
-<div class="row row-cols-1 row-cols-lg-2">
-<div class="col-lg-6 col-md-9 mb-3">
-<div class="card h-100 card-work">
-  <img src="/img/client/prs-for-music.jpg" class="card-img-top pt-2 img-centre img-fluid card-img-work" alt="PRS for Music Logo">
-  <div class="card-body">
-    <h5 class="card-title">PRS for Music</h5>
-    <h5><small class="text-muted">2019-present</small></h5>
-    <p class="card-text">PRS for Music represents the rights of over 150,000 songwriters & composers.</p>
-    <p class="card-text">I work on supporting and maintaining internal Oracle/Java based applications</p>
-    <span class="badge bg-light text-dark">Oracle Database</span>
-    <span class="badge bg-light text-dark">PL/SQL</span>
-    <span class="badge bg-light text-dark">Java</span>
-    <span class="badge bg-light text-dark">Apache Tomcat</span>
-    <span class="badge bg-light text-dark">Microsoft SQL Server</span>
-    <span class="badge bg-light text-dark">C#</span>
-    <span class="badge bg-light text-dark">IT Service Management</span>
-    <span class="badge bg-light text-dark">Audit</span>
-    <span class="badge bg-light text-dark">Systems Documentation</span>
-  </div>
-</div></div>
-<div class="col-lg-6 col-md-9 mb-3">
-<div class="card h-100 card-work">
-  <img src="/img/client/abellio.jpg" class="card-img-top pt-2 img-centre img-fluid card-img-work" alt="Abellio Logo">
-  <div class="card-body">
-    <h5 class="card-title">Abellio</h5>
-    <h5><small class="text-muted">2012-2019</small></h5>
-    <p class="card-text">Abellio is a public transport operating company which runs rail and bus contracts across the UK and Germany.</p>
-    <p class="card-text">I worked for Abellio for 7 years, mostly doing some things.</p>
-    <span class="badge bg-light text-dark">TCP/IP Networking</span>
-    <span class="badge bg-light text-dark">Active Directory</span>
-    <span class="badge bg-light text-dark">Office 365</span>
-    <span class="badge bg-light text-dark">Azure</span>
-    <span class="badge bg-light text-dark">On-Train WiFi</span>
-    <span class="badge bg-light text-dark">Datacentre Migration</span>
-    <span class="badge bg-light text-dark">Citrix</span>
-    <span class="badge bg-light text-dark">SIP/VOIP Telephony</span>
-    <span class="badge bg-light text-dark">Access Control</span>
-    <span class="badge bg-light text-dark">CCTV Systems</span>
-  </div>
-</div></div>
-<div class="col-lg-6 col-md-9 mb-3">
-<div class="card h-100 card-work">
-  <img src="/img/client/the-windmill.jpg" class="card-img-top pt-2 img-centre img-fluid card-img-work" alt="The Windmill Chatham Green Logo">
-  <div class="card-body">
-    <h5 class="card-title">The Windmill</h5>
-    <h5><small class="text-muted">ad-hoc</small></h5>
-    <p class="card-text">The Windmill is a Michelin award-winning pub restaurant in Essex.</p>
-    <p class="card-text">I operate and maintain the website, as well as running the network & infrastructure e.g. CCTV on-site.</p>
-    <span class="badge bg-light text-dark">TCP/IP Networking</span>
-    <span class="badge bg-light text-dark">WiFi</span>
-    <span class="badge bg-light text-dark">CCTV Systems</span>
-    <span class="badge bg-light text-dark">Wordpress</span>
-    <span class="badge bg-light text-dark">PHP</span>
-    <span class="badge bg-light text-dark">MySQL</span>
-    <span class="badge bg-light text-dark">SIP/VOIP Telephony</span>
-  </div>
-</div></div></div>
+  <h2 class="mt-4" id="work">Work</h2>
+  {% include work_history.html %}
 </div>
 <!-- Skills & Competencies -->
 <div class="row">
-<h2 class="mt-4">Skills & Competencies</h2>
-  <div class="col-sm-auto">
-      <h6>Technical Skills:</h6>
-      <ul class="list-unstyled">
-          <li>Oracle Database</li>
-          <li>Apache Tomcat</li>
-          <li>Office 365</li>
-          <li>Azure Active Directory</li>
-          <li>TCP/IP Networking</li>
-          <li>Windows Server</li>
-          <li>WiFi</li>
-          <li>SIP/VOIP Telephony</li>
-          <li>Access Control & CCTV Systems</li>
-      </ul>
-  </div>
-  <div class="col-sm-auto">
-      <h6>Code:</h6>
-      <ul class="list-unstyled">
-          <li>SQL (Oracle, Microsoft & MySQL)</li>
-          <li>Python</li>
-          <li>HTML5/CSS</li>
-          <li>Java</li>
-      </ul>
-  </div>
-  <div class="col-sm-auto">
-      <h6>Other Skills:</h6>
-      <ul class="list-unstyled">
-          <li>Application Portfolio Management</li>
-          <li>IT Service Management</li>
-          <li>English</li>
-          <li>French</li>
-          <li>German</li>
-      </ul>
-  </div>
+  <h2 class="mt-4" id="skills">Skills & Competencies</h2>
+  {% include skills_competencies.html %}
 </div>
 <!-- Contact -->
 <div class="row">
-<h2 class="mt-4">Contact Me</h2>
+<h2 class="mt-4" id="contact">Contact Me</h2>
 <p>You can reach me by email, Twitter, Discord. If you're lucky I might tell you how.</p>
 </div>
