made current employer name a link

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 <!-- Intro -->
 <div class="row">
 <h2 id="top">Hello</h2>
-<p>My name is Henry Cole. I'm a systems analyst from London. I currently work at PRS for Music, primarily with Oracle/Java applications. 
+<p>My name is Henry Cole. I'm a systems analyst from London. I currently work at <a href="/#work">PRS for Music</a>, primarily with Oracle/Java applications. 
 In my spare time I like travelling, visiting quirky pubs, and tinkering with personal code/computer projects.</p>
 </div>
 <!-- Blog -->
