--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <!-- Blog -->
 <div class="row">
-    <h2 class="mt-4">Blog</h2>
+    <h2>Blog</h2>
     <div class="posts">
       {% for post in site.posts %}
         <article class="post mt-4">
