--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@ In my spare time I like travelling, visiting quirky pubs, and tinkering with per
   <h2 class="mt-4">Blog</h2>
   {% include blog_cards.html %}
 </div>
-<!-- Work History -->
+<!-- Projects -->
 <div class="row">
-  <h2 class="mt-4" id="work">Work</h2>
-  {% include work_history.html %}
+  <h2 class="mt-4" id="work">Projects</h2>
+  {% include projects.html %}
 </div>
 <!-- Skills & Competencies -->
 <div class="row">
