--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@ layout: default
 <!-- Intro -->
 <div class="row">
 <h2 id="top">Hello</h2>
-<p>My name is Henry Cole. I'm a systems analyst from London. I currently work at <a class="text-muted text-decoration-none" href="/#work">PRS for Music</a>, primarily with Oracle/Java applications. 
-In my spare time I like travelling, visiting quirky pubs, and tinkering with personal code/computer projects.</p>
+<p>My name is Henry. I'm a systems analyst & engineer from London.</p>
+<p>I currently work at <a class="text-muted text-decoration-none" href="https://www.prsformusic.com/">PRS for Music</a>,
+   primarily with Oracle/Java applications. Previously I worked for Abellio, delivering enterprise IT across the UK rail network.</p>
+<p>In my spare time I like travelling, visiting quirky pubs, and tinkering with personal code/computer projects.</p>
 </div>
 <!-- Blog -->
 <div class="row">
