--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@ layout: default
 <!-- Intro -->
 <div class="row">
 <h2 id="top">Hello</h2>
-<p>My name is Henry. I'm a systems analyst & engineer from London.</p>
+<p>My name is Henry. I'm a systems analyst & engineer in London, originally from Suffolk.</p>
 <p>I currently work at <a class="text-muted text-decoration-none" href="https://www.prsformusic.com/">PRS for Music</a>,
-   primarily with Oracle/Java applications. Previously I worked for Abellio, delivering enterprise IT across the UK rail network.</p>
-<p>In my spare time I like travelling, visiting quirky pubs, and tinkering with personal code/computer projects.</p>
+  primarily on Oracle/Java applications, whilst also working with a number of clients on a freelance basis, delivering websites and software projects.
+  Previously, I spent 7 years at Abellio, delivering enterprise IT across the UK rail network.</p>
+<p>In my spare time I love listening to music (especially going to gigs!), travelling, visiting quirky pubs and tinkering with personal code/computer projects.</p>
 </div>
 <!-- Blog -->
 <div class="row">
