--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@ layout: default
 <div class="row">
 <h2 id="top">Hello</h2>
 <p>My name is Henry. I'm a systems analyst & engineer in London, originally from Suffolk.</p>
-<p>I currently work at <a class="text-muted text-decoration-none" href="https://www.prsformusic.com/">PRS for Music</a>,
+<p>I currently work at <a class="text-muted text-decoration-none" href="https://www.prsformusic.com/" target="_blank">PRS for Music</a>,
   primarily on Oracle/Java applications, whilst also working with a number of clients on a freelance basis, delivering websites and software projects.
-  Previously, I spent 7 years at Abellio, delivering enterprise IT across the UK rail network.</p>
+  Previously, I spent 7 years at <a class="text-muted text-decoration-none" href="https://www.abellio.com/" target="_blank">Abellio</a>, 
+  delivering enterprise IT across the UK rail network.</p>
 <p>In my spare time I love listening to music (especially going to gigs!), travelling, visiting quirky pubs and tinkering with personal code/computer projects.</p>
 </div>
 <!-- Blog -->
