changed circleci to use env vars

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ layout: default
 </div>
 <!-- Projects -->
 <div class="row">
-  <h2 class="mt-4 mb-3" id="work">Projects</h2>
+  <h2 class="mt-4 mb-3" id="work">Recent Projects</h2>
   {% include projects.html %}
 </div>
 <!-- Contact -->
