--- a/index.html
+++ b/index.html
@@ -24,5 +24,14 @@ layout: default
 <!-- Contact -->
 <div class="row">
 <h2 class="mt-4 mb-3" id="contact">Contact Me</h2>
-<p>You can reach me by email, Twitter, Discord. If you're lucky I might tell you how.</p>
+<p>You can email me here: henry@henrycole.uk</p>
+<p>I'm also available on various IM apps:</p>
+<ul>
+  <li><a href="https://teams.microsoft.com/l/chat/0/0?users=henry@henrycole.uk" target="_blank">henry@henrycole.uk</a> on Teams</li>
+  <li>hcuk94#9931 on Discord</li>
+  <li><a href="https://t.me/henrycole" target="_blank">@henrycole</a> on Telegram</li>
+  <li>henco on Libera.chat</li>
+</ul>
+<p>I also have the usual plethora of social media accounts:</p>
+{% include social_icons.html %}
 </div>
