--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ layout: default
 <h2 class="mt-4 mb-3" id="contact">Contact Me</h2>
 <p>You can email me here: henry@henrycole.uk</p>
 <p>I'm also available on various IM apps:</p>
-<ul class="list-unstyled">
+<ul class="list">
   <li><a href="https://teams.microsoft.com/l/chat/0/0?users=henry@henrycole.uk" target="_blank">henry@henrycole.uk</a> on Teams</li>
   <li>hcuk94#9931 on Discord</li>
   <li><a href="https://t.me/henrycole" target="_blank">@henrycole</a> on Telegram</li>
