--- a/index.html
+++ b/index.html
@@ -24,14 +24,17 @@ layout: default
 <!-- Contact -->
 <div class="row">
 <h2 class="mt-4 mb-3" id="contact">Contact Me</h2>
-<p>You can email me here: henry@henrycole.uk</p>
-<p>I'm also available on various IM apps:</p>
-<ul class="list">
-  <li><a href="https://teams.microsoft.com/l/chat/0/0?users=henry@henrycole.uk" target="_blank">henry@henrycole.uk</a> on Teams</li>
-  <li>hcuk94#9931 on Discord</li>
-  <li><a href="https://t.me/henrycole" target="_blank">@henrycole</a> on Telegram</li>
-  <li>henco on Libera.chat</li>
+<ul class="list-unstyled">
+  <li>You can email me here: henry@henrycole.uk</li>
+  <li>I'm also available on various IM apps:
+    <ul>
+      <li><a href="https://teams.microsoft.com/l/chat/0/0?users=henry@henrycole.uk" target="_blank">henry@henrycole.uk</a> on Teams</li>
+      <li>hcuk94#9931 on Discord</li>
+      <li><a href="https://t.me/henrycole" target="_blank">@henrycole</a> on Telegram</li>
+      <li>henco on Libera.chat</li>
+    </ul>
+  </li>
+  <li>I also have the usual plethora of social media accounts:</li>
 </ul>
-<p>I also have the usual plethora of social media accounts:</p>
 <div>{% include social_icons.html %}</div>
 </div>
