--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ layout: default
 <div class="row">
 <h2 class="mt-4 mb-3" id="contact">Contact Me</h2>
 <ul class="list-unstyled">
-  <li>You can email me here: henry@henrycole.uk</li>
+  <li class="pb-1">You can email me here: henry@henrycole.uk</li>
   <li>I'm also available on various IM apps:
     <ul>
       <li><a href="https://teams.microsoft.com/l/chat/0/0?users=henry@henrycole.uk" target="_blank">henry@henrycole.uk</a> on Teams</li>
@@ -34,7 +34,7 @@ layout: default
       <li>henco on Libera.chat</li>
     </ul>
   </li>
-  <li>I also have the usual plethora of social media accounts:</li>
 </ul>
+<p class="pb-0">I also have the usual plethora of social media accounts:</p>
 <div>{% include social_icons.html %}</div>
 </div>
