more contact spacing changes

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@ layout: default
 <!-- Contact -->
 <div class="row">
 <h2 class="mt-4 mb-3" id="contact">Contact Me</h2>
+<p>You can email me here: henry@henrycole.uk</p>
 <ul class="list-unstyled">
-  <li class="pb-1">You can email me here: henry@henrycole.uk</li>
   <li>I'm also available on various IM apps:
     <ul>
       <li><a href="https://teams.microsoft.com/l/chat/0/0?users=henry@henrycole.uk" target="_blank">henry@henrycole.uk</a> on Teams</li>
