--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@ layout: default
 <!-- Contact -->
 <div class="row">
 <h2 class="mt-4 mb-3" id="contact">Contact Me</h2>
-<p>You can email me here: henry@henrycole.uk</p>
+<p>You can email me here: <a class="text-muted text-decoration-none" href="mailto:henry@henrycole.uk">henry@henrycole.uk</a></p>
 <ul class="list-unstyled">
   <li>I'm also available on various IM apps:
     <ul>
-      <li><a href="https://teams.microsoft.com/l/chat/0/0?users=henry@henrycole.uk" target="_blank">henry@henrycole.uk</a> on Teams</li>
+      <li><a class="text-muted text-decoration-none" href="https://teams.microsoft.com/l/chat/0/0?users=henry@henrycole.uk" target="_blank">henry@henrycole.uk</a> on Teams</li>
       <li>hcuk94#9931 on Discord</li>
-      <li><a href="https://t.me/henrycole" target="_blank">@henrycole</a> on Telegram</li>
+      <li><a class="text-muted text-decoration-none" href="https://t.me/henrycole" target="_blank">@henrycole</a> on Telegram</li>
       <li>henco on Libera.chat</li>
     </ul>
   </li>
