--- a/blog.html
+++ b/blog.html
@@ -8,8 +8,8 @@ layout: default
       {% for post in site.posts %}
         <article class="post mt-4">
           <h3><a href="{{ site.baseurl }}{{ post.url }}" class="text-reset text-decoration-none">{{ post.title }}</a></h3>
-          <p class="text-muted">{{ post.date | date: "%-d %B %Y"}}</p>
-          <p class="my-0">{{ post.excerpt }}</p>
+          <p class="text-muted mb-1">{{ post.date | date: "%-d %B %Y"}}</p>
+          <p class="mb-1">{{ post.excerpt }}</p>
           <a class="text-muted text-decoration-none" href="{{ site.baseurl }}{{ post.url }}">Read ➔</a>
         </article>
       {% endfor %}
