--- a/blog.html
+++ b/blog.html
@@ -7,8 +7,8 @@ layout: default
     <div class="posts">
       {% for post in site.posts %}
         <article class="post mt-4">
-          <h3><a href="{{ site.baseurl }}{{ post.url }}" class="text-reset text-decoration-none">{{ post.title }}</a></h3>
-          <p class="text-muted mb-1">{{ post.date | date: "%-d %B %Y"}}</p>
+          <h3 class="mb-1"><a href="{{ site.baseurl }}{{ post.url }}" class="text-reset text-decoration-none">{{ post.title }}</a></h3>
+          <p class="text-muted mb-2">{{ post.date | date: "%-d %B %Y"}}</p>
           <p class="mb-1">{{ post.excerpt }}</p>
           <a class="text-muted text-decoration-none" href="{{ site.baseurl }}{{ post.url }}">Read ➔</a>
         </article>
