--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ layout: default
   Previously, I spent 7 years at <a class="text-muted text-decoration-none" href="https://www.abellio.com/" target="_blank">Abellio</a>, 
   delivering enterprise IT across the UK rail network.</p>
 <p>In my spare time I love listening to music (especially going to gigs!), travelling, visiting quirky pubs and tinkering with personal code/computer projects.</p>
+<p>Please <a href="/#contact">get in touch</a> if you'd like to chat.</p>
 </div>
 <!-- Blog -->
 <div class="row">
@@ -26,7 +27,7 @@ layout: default
 <h2 class="mt-4 mb-3" id="contact">Contact Me</h2>
 <p>You can email me here: <a class="text-muted text-decoration-none" href="mailto:henry@henrycole.uk">henry@henrycole.uk</a></p>
 <ul class="list-unstyled">
-  <li>I'm also available on various IM apps:
+  <li>I'm available on various IM apps:
     <ul>
       <li><a class="text-muted text-decoration-none" href="https://teams.microsoft.com/l/chat/0/0?users=henry@henrycole.uk" target="_blank">henry@henrycole.uk</a> on Teams</li>
       <li>hcuk94#9931 on Discord</li>
