fixed styling on 'get in touch' anchor link

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: default
   Previously, I spent 7 years at <a class="text-muted text-decoration-none" href="https://www.abellio.com/" target="_blank">Abellio</a>, 
   delivering enterprise IT across the UK rail network.</p>
 <p>In my spare time I love listening to music (especially going to gigs!), travelling, visiting quirky pubs and tinkering with personal code/computer projects.</p>
-<p>Please <a href="/#contact">get in touch</a> if you'd like to chat.</p>
+<p>Please <a class="text-muted text-decoration-none" href="/#contact">get in touch</a> if you'd like to chat.</p>
 </div>
 <!-- Blog -->
 <div class="row">
