--- a/index.html
+++ b/index.html
@@ -4,12 +4,8 @@ layout: default
 <!-- Intro -->
 <div class="row">
 <h2 id="top">Hello</h2>
-<p>My name is Henry. I'm a systems analyst & engineer in London, originally from Suffolk.</p>
-<p>I currently work at <a class="text-muted text-decoration-none" href="https://www.prsformusic.com/" target="_blank">PRS for Music</a>,
-  primarily on Oracle/Java applications, whilst also working with a number of clients on a freelance basis, delivering websites and software projects.
-  Previously, I spent 7 years at <a class="text-muted text-decoration-none" href="https://www.abellio.com/" target="_blank">Abellio</a>, 
-  delivering enterprise IT across the UK rail network.</p>
-<p>In my spare time I love listening to music (especially going to gigs!), travelling, visiting quirky pubs and tinkering with personal code/computer projects.</p>
+<p>My name is Henry. I'm a systems analyst & engineer based in London, currently working full time at <a class="text-muted text-decoration-none" href="https://www.prsformusic.com/" target="_blank">PRS for Music</a></p>
+<p>This blog is mostly focused on technical content, based on various bits of work, personal projects and general experimenting. If I spend some time figuring something out, I try to write it up here in the hope that it might help others.</p>
 <p>Please <a class="text-muted text-decoration-none" href="/#contact">get in touch</a> if you'd like to chat.</p>
 </div>
 <!-- Blog -->
