minor homepage updates

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ layout: default
 <h2 class="mt-4 mb-3" id="contact">Contact Me</h2>
 <p>You can email me here: <a class="text-muted text-decoration-none" href="mailto:henry@henrycole.uk">henry@henrycole.uk</a></p>
 <ul class="list-unstyled">
-  <li>I'm available on various IM apps:
+  <li>I'm also available on various IM apps and social media:
     <ul>
       <li><a class="text-muted text-decoration-none" href="https://teams.microsoft.com/l/chat/0/0?users=henry@henrycole.uk" target="_blank">henry@henrycole.uk</a> on Teams</li>
       <li>hcuk94#9931 on Discord</li>
@@ -31,6 +31,5 @@ layout: default
     </ul>
   </li>
 </ul>
-<p class="pb-0">I also have the usual plethora of social media accounts:</p>
 <div>{% include social_icons.html %}</div>
 </div>
