add mastodon link

--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@ layout: default
 <ul class="list-unstyled">
   <li>I'm also available on various IM apps and social media:
     <ul>
-      <li><a class="text-muted text-decoration-none" href="https://teams.microsoft.com/l/chat/0/0?users=henry@henrycole.uk" target="_blank">henry@henrycole.uk</a> on Teams</li>
-      <li>hcuk94#9931 on Discord</li>
-      <li><a class="text-muted text-decoration-none" href="https://t.me/henrycole" target="_blank">@henrycole</a> on Telegram</li>
+      <li>Teams: <a class="text-muted text-decoration-none" href="https://teams.microsoft.com/l/chat/0/0?users=henry@henrycole.uk" target="_blank">henry@henrycole.uk</a></li>
+      <li>Discord: hcuk94#9931</li>
+      <li>Telegram: <a class="text-muted text-decoration-none" href="https://t.me/henrycole" target="_blank">@henrycole</a></li>
+      <li>Mastodon: <a class="text-muted text-decoration-none" rel="me" href="https://social.lc/@henry" target="_blank">@henry@social.lc</a></li>
     </ul>
   </li>
 </ul>
