re-structure social links

--- a/index.html
+++ b/index.html
@@ -22,14 +22,6 @@ layout: default
 <div class="row">
 <h2 class="mt-4 mb-3" id="contact">Contact Me</h2>
 <p>You can email me here: <a class="text-muted text-decoration-none" href="mailto:henry@henrycole.uk">henry@henrycole.uk</a></p>
-<ul class="list-unstyled">
-  <li>I'm also available on various IM apps and social media:
-    <ul>
-      <li>Teams: <a class="text-muted text-decoration-none" href="https://teams.microsoft.com/l/chat/0/0?users=henry@henrycole.uk" target="_blank">henry@henrycole.uk</a></li>
-      <li>Discord: hcuk94#9931</li>
-      <li>Mastodon: <a class="text-muted text-decoration-none" rel="me" href="https://social.lc/@henry" target="_blank">@henry@social.lc</a></li>
-    </ul>
-  </li>
-</ul>
+<p>I'm also available on these social platforms:</p>
 <div>{% include social_icons.html %}</div>
 </div>
