--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 <!-- Intro -->
 <div class="row">
 <h2 id="top">Hello</h2>
-<p>My name is Henry. I'm a systems analyst & engineer based in London, currently working full time at <a class="text-muted text-decoration-none" href="https://www.prsformusic.com/" target="_blank">PRS for Music</a></p>
+<p>My name is Henry. I'm a systems engineer based in London, currently working full time at <a class="text-muted text-decoration-none" href="https://www.prsformusic.com/" target="_blank">PRS for Music</a></p>
 <p>This blog is mostly focused on technical content, based on various bits of work, personal projects and general experimenting. If I spend some time figuring something out, I try to write it up here in the hope that it might help others.</p>
 <p>Please <a class="text-muted text-decoration-none" href="/#contact">get in touch</a> if you'd like to chat.</p>
 </div>
