--- a/index.html
+++ b/index.html
@@ -3,24 +3,24 @@ layout: default
 ---
 <!-- Intro -->
 <div class="row">
-<h2 id="top">Hello</h2>
+<h2 id="top">Hello 👋</h2>
 <p>My name is Henry. I'm a systems engineer based in London, currently working full time at <a class="text-muted text-decoration-none" href="https://www.prsformusic.com/" target="_blank">PRS for Music</a></p>
 <p>This blog is mostly focused on technical content, based on various bits of work, personal projects and general experimenting. If I spend some time figuring something out, I try to write it up here in the hope that it might help others.</p>
 <p>Please <a class="text-muted text-decoration-none" href="/#contact">get in touch</a> if you'd like to chat.</p>
 </div>
 <!-- Blog -->
 <div class="row">
-  <h2 class="mt-4 mb-3">Blog</h2>
+  <h2 class="mt-4 mb-3">Blog ✍️</h2>
   {% include blog_cards.html %}
 </div>
 <!-- Projects -->
 <div class="row">
-  <h2 class="mt-4 mb-3" id="work">Recent Projects</h2>
+  <h2 class="mt-4 mb-3" id="work">Recent Projects 🧑‍💻</h2>
   {% include projects.html %}
 </div>
 <!-- Contact -->
 <div class="row">
-<h2 class="mt-4 mb-3" id="contact">Contact Me</h2>
+<h2 class="mt-4 mb-3" id="contact">Contact Me 📮</h2>
 <p>You can email me here: <a class="text-muted text-decoration-none" href="mailto:henry@henrycole.uk">henry@henrycole.uk</a></p>
 <p>I'm also available on these social platforms:</p>
 <div>{% include social_icons.html %}</div>
